# Template-rust-rp2040

./: Cargo.toml
firmware/: Cargo.toml  README.md
firmware/src/: hardware.rs  main.rs  panic.rs
